--- a/portfolio/scss/_utilities.scss
+++ b/portfolio/scss/_utilities.scss
@@ -95,3 +95,11 @@ input[class^="btn-"]:hover {
   display: block;
   margin: 0 auto 1rem auto;
 }
+
+// Backgrounds 
+.bg {
+  &-main { background: $main-color; color: set-text-color($main-color)}
+  &-dark { background: $dark-color; color: set-text-color($dark-color)}
+  &-light { background: $light-color; color: set-text-color($light-color)}
+  &-medium { background: $medium-color; color: set-text-color($medium-color)}
+}
